--- a/src/app/css/blog.css
+++ b/src/app/css/blog.css
@@ -44,6 +44,11 @@ Blog Main
           transform: rotate(2deg) scale(1.1);
 }
 
+#table-body{
+  background-color: beige;
+}
+
+
 /*==================
 Blog PAge 
 ==================== */
