--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -463,7 +463,7 @@ Page Banner Area
   padding: 90px 0px;
   background: #F4F5F8;
   position: relative;
-  background: url("../images/bg/page-title.jpg");
+  background: url("../images/bg/bg-blue.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   z-index: 1;
